--- a/lesson1/index1.html
+++ b/lesson1/index1.html
@@ -22,8 +22,23 @@ MIU Student
 <h4>W1D3-Recipe</h4>
 <h4>W1D4-Movie Review</h4>
 <h4>W1D5-MP3 Library</h4>
+
 <h4>W1D5-Movie Review PHP</h4>
 
-<img src="./images/download.png" alt="html5 logo" >
+
+
+
+
+
+<hr>
+<h6>@ Hermon Abraham, Yehdego</h6>
+<h6>Maharishi International University</h6>
+<h6>Address: 1000 N 4th St</h6>
+<h6>Email:hermon.yehdego@miu.edu</h6>
+<a
+href="http://validator.w3.org/check/referer"> <img
+src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+alt="html validator"/></a>
+
 </body>
 </html>
