--- a/lesson1/index1.html
+++ b/lesson1/index1.html
@@ -28,13 +28,15 @@ MIU Student
 
 
 
-
+<br          />
 
 <hr>
-<h6>@ Hermon Abraham, Yehdego</h6>
-<h6>Maharishi International University</h6>
-<h6>Address: 1000 N 4th St</h6>
-<h6>Email:hermon.yehdego@miu.edu</h6>
+<p>&copy;Hermon Abraham, Yehdego
+| Maharishi International University
+| Address: 1000 N 4th St
+| Email:hermon.yehdego@miu.edu
+
+</p>
 <a
 href="http://validator.w3.org/check/referer"> <img
 src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
