--- a/lesson1/index1.html
+++ b/lesson1/index1.html
@@ -1,11 +1,13 @@
 
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
 
 <head lang="en">
-<meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8"/>
+    <meta name="description" content="Learn HTML"/>
+    <meta name="keywords" content="HTML,CSS"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+   
 <title>
 MIU Student
 </title>
@@ -15,32 +17,37 @@ MIU Student
 <h1>
    Hermon Yehdego
 </h1>
-<h4>
-    W1D1-This HomePage 
-</4>
-<h4>W1D2-About US</h4>
-<h4>W1D3-Recipe</h4>
-<h4>W1D4-Movie Review</h4>
-<h4>W1D5-MP3 Library</h4>
+<ul>
+<li> W1D1-This HomePage </li>
+<li>W1D2-About US</li>
+<li>W1D3-Recipe</li>
+<li>W1D4-Movie Review</li>
+<li>W1D5-MP3 Library</li>
 
-<h4>W1D5-Movie Review PHP</h4>
+<li>W1D5-Movie Review </li>
 
-
+</ul>
 
 
 <br          />
 
 <hr>
-<p>&copy;Hermon Abraham, Yehdego
-| Maharishi International University
-| Address: 1000 N 4th St
-| Email:hermon.yehdego@miu.edu
+<p>
+    <h6>&copy;Hermon Abraham, Yehdego</h6>
+<h6> Maharishi International University</h6>
+<h6> Address: 1000 N 4th St</h6>
+<h6> Email:hermon.yehdego@miu.edu
+</h6>
+    <p>
 
-</p>
 <a
-href="http://validator.w3.org/check/referer"> <img
-src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+href="https://validator.w3.org/check/referer"> <img
+src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png"
 alt="html validator"/></a>
+</p>
 
 </body>
+
+
+
 </html>
