--- a/lesson1/index1.html
+++ b/lesson1/index1.html
@@ -42,7 +42,7 @@ MIU Student
 
 <a
 href="https://validator.w3.org/check/referer"> <img
-src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
 alt="html validator"/></a>
 </p>
 
