--- a/lesson1/index1.html
+++ b/lesson1/index1.html
@@ -41,9 +41,9 @@ MIU Student
     <p>
 
 <a
-href="https://validator.w3.org/nu/?doc=https://github.com/hermonyehdego/CS1_472.git/lesson1/index.html"> <img
-src="./images/download.png"
-alt="html validator"/></a>
+href="https://validator.w3.org/nu/?doc=https://github.com/hermonyehdego/CS1_472.git/lesson1/index.html">
+ <img src="./images/download.png" alt="html validator"/>
+</a>
 </p>
 
 </body>
