lab0 edited morning

--- a/lesson1/index1.html
+++ b/lesson1/index1.html
@@ -41,7 +41,7 @@ MIU Student
     <p>
 
 <a
-href="https://validator.w3.org/nu/?doc=https://github.com/hermonyehdego/CS1_472.git/lesson1/index.html">
+href="https://validator.w3.org/nu/?doc=https://github.com/hermonyehdego/CS1_472.git">
  <img src="./images/download.png" alt="html validator"/>
 </a>
 </p>
