--- a/Lab_0/index.html
+++ b/Lab_0/index.html
@@ -50,7 +50,7 @@ MIU Student
     <p>
 
 <a
-href="https://validator.w3.org/nu/?doc=https://github.com/hermonyehdego/CS1_472.git">
+href="https://validator.w3.org/nu/?doc=https://hermonyehdego.github.io/CS1_472/">
  <img src="./images/download.png" alt="html validator"/>
 </a>
 </p>
