--- a/Home Work1/pie.html
+++ b/Home Work1/pie.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
+
+
+
+
+
+
+
+
 <head>
 	<title>Grandma's Lemon Meringue Pie</title>
     <meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="recipe.css">
 </head>
+
+
+
+
+
+
+
+
+
+
+
+
 <body>  
 
+
+
+
 <h2 class="main">Grandma's Lemon Meringue Pie</h2>
+
+
+
+
 <img src="./images/pie.jpg" alt="Mama Piza">
+
+
+
 <ul class="menu"><li>lemon meringue pie</li>
 <li>One 9-inch pie</li>
 <li>30 Min - Prep time</li>
@@ -16,7 +48,16 @@
 <li>40 Min - Total</li>
 <li>8 Servings</li></ul><hr>
 
+
+
+
 <h2>INGREDIENTS</h2>
+
+
+
+
+
+
 
     <ul class="pie"><li>1 cup white sugar</li>
     <li>2 <abbr title="tablespoons">tbsp </abbr>all-purpose flour</li>
@@ -30,9 +71,23 @@
     <li>4 egg whites</li>
     <li>6 <abbr title="tablespoons" >tbsp </abbr>white sugar</li></ul><hr/>
 
+
+
+
+
+
 <h2>DIRECTIONS</h2>
 
-    <ol><li><strong>Preheat Oven: </strong>Preheat oven to 350 degrees F (175 degrees C).</li>
+
+
+
+
+
+
+
+
+    <ol>
+    <li><strong>Preheat Oven: </strong>Preheat oven to 350 degrees F (175 degrees C).</li>
     <li><strong>Make Lemon Filling:</strong> In a medium saucepan ...</li>
         <ul class="pie"><li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
         <li>Stir in water, lemon juice and lemon zest.</li>
@@ -49,27 +104,52 @@
         <li>Spread meringue over pie, sealing the edges at the crust.</li></ul>
     <li><strong>Bake:</strong> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li></ol>
 
+
+
 This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <del>cake </del>pie!<hr>
 
 <h2>USER COMMENTS</h2>
 
+
+
+
+
     <blockquote>This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.<br/><br/>
 
     - Emilie S.</blockquote>
+
 
     <blockquote>Q: What do you call an ape who loves pie?<br/>
     A: A meringue-utan.<br/><br>
 
     - Vickie K.</blockquote>
 
+
    <blockquote> This site can really engage my interest. Follow the recipe above and make it so! This pie is number one.<br/><br/>
 
     - Jean-Luc Piecard</blockquote><hr/>
+
 
 <h2>LINKS</h2>
 
 <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a><br>
 <a href="../index.html">Home</a><br/>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <footer>
 <div class="val"><a href="http://validator.w3.org/check/referer">
 <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
@@ -81,5 +161,25 @@ A Granny's Pies Production|
 All rights reserved|</pre>  
 
 </footer>
+
+
+
+
+
+
+
+
+
 </body>
+
+
+
+
+
+
+
+
+
+
+
 </html>
