--- a/Lab_1/aboutme.html
+++ b/Lab_1/aboutme.html
@@ -28,7 +28,7 @@
 	<h2 class="main">About Hermon Yehdego</h2>
 
 
-	<p >My name is Hermon Yehdego. I'm <strong>Happy</strong>, <strong>Smiely Face</strong> and <strong>Calm.</strong></p>
+	<p class="name">My name is Hermon Yehdego. I'm <strong>Happy</strong>, <strong>Smiely Face</strong> and <strong>Calm.</strong></p>
 	<hr/>
 
 		<ul>
