--- a/Lab_1/aboutme.html
+++ b/Lab_1/aboutme.html
@@ -46,16 +46,16 @@
         <p>(I actually dont watch too many movies, ... so here it goes!)</p>
 
 
-		<ol>
+		<ol >
 			<li>Selling The Sunset:<br/></li>
 			<li>Harry Potter:<br/></li>
 			<li><a href="https://www.netflix.com/title/80993568" >Buying Beverly Hills</a></li>
-				<ul class="list">
-					<li>Reality TV</li>
+				<ul >
+					<li class="list">Reality TV</li>
 					<ul><li>About rich family in LA that work together.
                         </li></ul>
 
-					<li>Creators:</li>
+					<li class="list">Creators:</li>
 						<ul> <li>Mauricio Umansky</li>
 							<li>Kyle Richards</li>
 					
@@ -63,7 +63,7 @@
 					</ul>	
 
 
-					<li>Actors:</li>
+					<li class="list" >Actors:</li>
 					<ul><li> Alexia Umansky</li>
                     <li>Mauricio Umansky</li>
                     <li> Farrah Aldjufrie</li>
