--- a/Home Work1/pie.html
+++ b/Home Work1/pie.html
@@ -32,7 +32,7 @@
 
 
 
-<h2 class="main">Grandma's Lemon Meringue Pie</h2>
+<h2 class="mymain">Grandma's Lemon Meringue Pie</h2>
 
 
 
@@ -41,7 +41,7 @@
 
 
 
-<ul class="menu"><li>lemon meringue pie</li>
+<ul class="heri"><li>lemon meringue pie</li>
 <li>One 9-inch pie</li>
 <li>30 Min - Prep time</li>
 <li>10 Min - Cook time</li>
@@ -59,7 +59,7 @@
 
 
 
-    <ul class="pie"><li>1 cup white sugar</li>
+    <ul class="mypie"><li>1 cup white sugar</li>
     <li>2 <abbr title="tablespoons">tbsp </abbr>all-purpose flour</li>
     <li>3 <abbr title="tablespoons">tbsp </abbr> cornstarch</li>
     <li>1/4 <abbr title="teaspoon">tsp</abbr> salt</li>
@@ -89,7 +89,7 @@
     <ol>
     <li><strong>Preheat Oven: </strong>Preheat oven to 350 degrees F (175 degrees C).</li>
     <li><strong>Make Lemon Filling:</strong> In a medium saucepan ...</li>
-        <ul class="pie"><li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+        <ul class="mypie"><li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
         <li>Stir in water, lemon juice and lemon zest.</li>
         <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
         <li>Stir in butter.</li>
@@ -99,7 +99,7 @@
         <li>Remove from heat.</li>
         <li>Pour filling into baked pastry shell.</li></ul>
     <li><strong>Make Meringue:</strong> In a large glass or metal bowl ...</li>
-        <ul class="pie"><li>Whip egg whites until foamy.</li>
+        <ul class="mypie"><li>Whip egg whites until foamy.</li>
         <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
         <li>Spread meringue over pie, sealing the edges at the crust.</li></ul>
     <li><strong>Bake:</strong> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li></ol>
@@ -151,12 +151,12 @@ This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fa
 
 
 <footer>
-<div class="val"><a href="http://validator.w3.org/check/referer">
+<div class="hermon"><a href="http://validator.w3.org/check/referer">
 <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
 <a href="http://jigsaw.w3.org/css-validator/check/referer">
 <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div>
 
-<pre class="copy" >Copyright Â© 2012 Granny's Pies|
+<pre class="hemon1" >Copyright Â© 2012 Granny's Pies|
 A Granny's Pies Production|
 All rights reserved|</pre>  
 
