--- a/Lab_1/aboutme.html
+++ b/Lab_1/aboutme.html
@@ -20,18 +20,15 @@
 
 
 <body>
-
-
-
-	<div >
+	
 
 	<h2 class="main">About Hermon Yehdego</h2>
 
 
-	<p class="name">My name is Hermon Yehdego. I'm <strong>Happy</strong>, <strong>Smiely Face</strong> and <strong>Calm.</strong></p>
+	<p class="name">My name is Hermon Yehdego. I'm <strong><em>Happy</em></strong>, <strong><em>Smiely Face</em></strong> and <strong><em>Calm.</em></strong></p>
 	<hr/>
 
-		<ul>
+		<ul class="newme">
 			<li>CS390 - Fundamental Programming Practice </li>
 			<li>CS401 - Modern Programming Practice</li>
             <li>CS422 - Web Application Programming</li>
@@ -39,6 +36,7 @@
 			<li>CS545 - Software Architecture</li>
 			<li>CS435 - Algorithms</li>
 		</ul>
+		
 
 
 		<h2 ><em>My Favorite Movie</em></h2>
@@ -73,6 +71,10 @@
 							
 					
 		</ol>
+
+	
+
+
 		<h2 >My Moods</h2>
 		<p><Strong>Happy</Strong><img src="./images/happy.png"alt="hermon" width="300" height="200"><Strong>&nbsp; Sad</Strong><img src="./images/sad.png" alt="hermon" width="300" height="200"></p>
 		<h2>Fun Facts About My Neighbors</h2>
