--- a/Lab_0/index.html
+++ b/Lab_0/index.html
@@ -15,7 +15,7 @@ MIU Student
 <body>
     <header>
         <nav>
-<img src="./images/heri.png" alt="html5 logo" >
+<img src="./images/heri.png" alt="html5 logo" width="200" height="200">
 </nav>
     </header>
     <main>
@@ -29,32 +29,40 @@ MIU Student
 <li>W1D3-Recipe</li>
 <li>W1D4-Movie Review</li>
 <li>W1D5-MP3 Library</li>
-
-<li>W1D5-Movie Review </li>
+<li> W2D1-javascript</li>
+<li>W2D2-</li>
+<li>W2D3-</li>
+<li>W2D4-</li>
+<li>W2D5-</li>
+<li>W2D5- </li>
 
 </ul>
 
 
-<br          />
+<br/>
 
 <hr>
 </section>
-    </main>
-    <footer>
+</main>
 
-    <h6>&copy;Hermon Abraham, Yehdego</h6>
-<h6> Maharishi International University</h6>
-<h6> Address: 1000 N 4th St</h6>
-<h6> Email:hermon.yehdego@miu.edu
-</h6>
-    <p>
 
-<a
-href="https://validator.w3.org/nu/?doc=https://hermonyehdego.github.io/CS1_472/">
- <img src="./images/download.png" alt="html validator"/>
+<footer>
+
+<p>  &copy;Hermon Abraham, Yehdego<br/>
+            Maharishi International University<br/>
+            Address: 1000 N 4th St<br/>
+            Email:hermon.yehdego@miu.edu<br/>
+</p>
+
+<p>
+<a href="https://validator.w3.org/nu/?doc=https://hermonyehdego.github.io/CS1_472/">
+ <img src="./images/download.png" alt="html validator" width="100" height="50" />
 </a>
 </p>
-    </footer>
+
+</footer>
+
+
 </body>
 
 
