--- a/Lab_0/index.html
+++ b/Lab_0/index.html
@@ -55,9 +55,10 @@ MIU Student
 </p>
 
 <p>
-<a href="https://validator.w3.org/nu/?doc=https://hermonyehdego.github.io/CS1_472/">
+<a href="https://validator.w3.org/check?uri=referer">
  <img src="./images/download.png" alt="html validator" width="100" height="50" />
 </a>
+<var></var>
 </p>
 
 </footer>
